--- a/apm-sniffer/optional-plugins/pom.xml
+++ b/apm-sniffer/optional-plugins/pom.xml
@@ -43,7 +43,7 @@
 
     <modules>
         <module>optional-spring-plugins</module>
-        <module>trace-ignore-plugin</module>
+<!--        <module>trace-ignore-plugin</module>-->
         <module>gson-2.8.x-plugin</module>
         <module>zookeeper-3.4.x-plugin</module>
         <module>customize-enhance-plugin</module>
